--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "was": "^1.0.31",
-    "ws": "^8.8.1"
-  },
-  "description": ""
+    "express": "^4.18.2",
+    "ws": "^8.11.0"
+  }
 }
